# cubic

./: .clang-format  .clang-tidy  .gitignore  Cargo.toml  README.md  xmake.lua
.github/actions/configure/: action.yaml
.github/workflows/: pr.yaml
config/sanitizer/: lsan.supp
crates/common/: Cargo.toml
crates/common/src/: runtime.rs
crates/cubic/: Cargo.toml
crates/cubic/src/: main.rs
crates/cubic/src/client/: application.rs  mod.rs
crates/cubic/src/client/render/: context.rs
crates/cubic/src/common/: mod.rs  primitive.rs  runtime.rs
