[package]
name = "cubic"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
raw-window-handle = "0.6.2"
wgpu = "26.0.1"
winit = "0.30.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = [
    "rt",
    "signal",
    "sync",
    "macros",
    "time",
] }
tokio-util = "0.7.16"
